--- a/echo-control/.env.example
+++ b/echo-control/.env.example
@@ -27,6 +27,9 @@ AUTH_GOOGLE_SECRET=
 AUTH_GITHUB_ID=
 AUTH_GITHUB_SECRET=
 
+# Email Provider via Resend - https://authjs.dev/getting-started/providers/resend
+AUTH_RESEND_KEY=
+
 # ----------
 # STRIPE
 # ----------
