--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.2.5",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
@@ -46,7 +47,6 @@
     "@trpc/server": "^11.4.4",
     "@vercel/blob": "^0.25.1",
     "@vercel/otel": "^1.13.0",
-    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -68,7 +68,7 @@
     "stripe": "^18.2.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.15"
   },
