--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -35,7 +35,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
@@ -67,7 +67,7 @@
     "recharts": "^2.15.4",
     "stripe": "^18.2.1",
     "superjson": "^2.2.2",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.15"
@@ -81,6 +81,7 @@
     "eslint-config-next": "15.3.3",
     "husky": "^9.0.0",
     "tsx": "^4.20.3",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5.0.0"
   }
 }
