--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -66,6 +66,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.4",
+    "server-only": "^0.0.1",
     "stripe": "^18.2.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
