--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -21,6 +21,7 @@
     "@auth/core": "^0.40.0",
     "@auth/prisma-adapter": "^2.10.0",
     "@coinbase/cdp-sdk": "^1.34.0",
+    "@coinbase/x402": "^0.5.0",
     "@headlessui/react": "^2.2.4",
     "@icons-pack/react-simple-icons": "^13.7.0",
     "@opentelemetry/api": "^1.9.0",
