--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -37,6 +37,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@coinbase/cdp-sdk": "^1.34.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.57.0",
     "@prisma/client": "^6.8.2",
@@ -55,7 +56,8 @@
     "prisma": "^6.8.2",
     "register": "link:@opentelemetry/auto-instrumentations-node/register",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "viem": "^2.33.3"
   },
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
