--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -59,7 +59,7 @@
     "lucide-react": "^0.511.0",
     "motion": "^12.23.12",
     "nanoid": "^5.1.5",
-    "next": "canary",
+    "next": "15.3.3",
     "next-auth": "5.0.0-beta.29",
     "next-path-matcher": "^1.0.2",
     "next-themes": "^0.4.6",
