--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -35,6 +35,7 @@
     "@prisma/client": "^6.13.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "^6.12.0",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-separator": "^1.1.7",
@@ -51,6 +52,7 @@
     "@trpc/server": "^11.4.4",
     "@vercel/blob": "^0.25.1",
     "@vercel/otel": "^1.13.0",
+    "autonumeric": "^4.10.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -68,6 +70,7 @@
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "recharts": "^2.15.4",
     "server-only": "^0.0.1",
     "stripe": "^18.2.1",
