--- a/echo-react-sdk/package.json
+++ b/echo-react-sdk/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zdql/echo-react-sdk",
-  "version": "0.1.26",
+  "name": "@merit-systems/echo-react-sdk",
+  "version": "1.0.1",
   "description": "React SDK for Echo OAuth2 + PKCE authentication and token management",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -54,7 +54,7 @@
     }
   },
   "dependencies": {
-    "@zdql/echo-typescript-sdk": "^1.0.21",
+    "@merit-systems/echo-typescript-sdk": "^1.0.0",
     "dompurify": "^3.2.6",
     "oidc-client-ts": "^3.2.1"
   },
