--- a/examples/nextjs14/package.json
+++ b/examples/nextjs14/package.json
@@ -12,7 +12,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@zdql/echo-react-sdk": "file:../../echo-react-sdk",
+    "@merit-systems/echo-react-sdk": "file:../../echo-react-sdk",
     "next": "^14.2.30",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
