--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -75,6 +75,7 @@
     "react-error-boundary": "^6.0.0",
     "recharts": "^2.15.4",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "stripe": "^18.2.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
