--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -25,6 +25,7 @@
     "@coinbase/x402": "^0.5.0",
     "@headlessui/react": "^2.2.4",
     "@icons-pack/react-simple-icons": "^13.7.0",
+    "@number-flow/react": "^0.5.10",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.57.2",
     "@opentelemetry/instrumentation": "0.57.2",
