--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.84.1",
@@ -61,6 +62,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.23.0",
+    "hast-util-to-jsx-runtime": "^2.3.6",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "motion": "^12.23.12",
@@ -76,6 +78,7 @@
     "react-error-boundary": "^6.0.0",
     "recharts": "^2.15.4",
     "server-only": "^0.0.1",
+    "shiki": "^3.9.2",
     "sonner": "^2.0.7",
     "stripe": "^18.2.1",
     "superjson": "^2.2.2",
