--- a/echo-react-sdk/package.json
+++ b/echo-react-sdk/package.json
@@ -44,9 +44,9 @@
   "author": "Merit Systems",
   "license": "MIT",
   "peerDependencies": {
+    "openai": "^4.0.0 || ^5.0.0",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
-    "openai": "^4.0.0 || ^5.0.0"
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "peerDependenciesMeta": {
     "openai": {
@@ -56,7 +56,8 @@
   "dependencies": {
     "@merit-systems/echo-typescript-sdk": "^1.0.0",
     "dompurify": "^3.2.6",
-    "oidc-client-ts": "^3.2.1"
+    "oidc-client-ts": "^3.2.1",
+    "react-oidc-context": "^3.3.0"
   },
   "devDependencies": {
     "@storybook/addon-docs": "^9.0.10",
@@ -79,6 +80,7 @@
     "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "msw": "^2.6.4",
+    "openai": "^4.0.0 || ^5.0.0",
     "prettier": "^3.3.3",
     "storybook": "^9.0.10",
     "terser": "^5.41.0",
@@ -86,7 +88,6 @@
     "undici": "^6.19.8",
     "vite": "^6.0.1",
     "vite-plugin-dts": "^4.3.0",
-    "vitest": "^3.2.3",
-    "openai": "^4.0.0 || ^5.0.0"
+    "vitest": "^3.2.3"
   }
 }
