--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -46,6 +46,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@shikijs/core": "^3.9.2",
+    "@shikijs/engine-javascript": "^3.9.2",
+    "@shikijs/langs": "^3.9.2",
+    "@shikijs/themes": "^3.9.2",
+    "@shikijs/types": "^3.9.2",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.84.1",
