--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -57,7 +57,8 @@
     "register": "link:@opentelemetry/auto-instrumentations-node/register",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "viem": "^2.33.3"
+    "viem": "^2.33.3",
+    "openai": "^4.97.0"
   },
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
