--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -38,27 +38,33 @@
   "license": "ISC",
   "dependencies": {
     "@coinbase/cdp-sdk": "^1.34.0",
+    "@merit-systems/echo-typescript-sdk": "file:../echo-typescript-sdk",
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/api-logs": "0.57.2",
     "@opentelemetry/auto-instrumentations-node": "^0.57.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
+    "@opentelemetry/resources": "1.26.0",
+    "@opentelemetry/sdk-logs": "0.57.2",
+    "@opentelemetry/winston-transport": "^0.14.1",
     "@prisma/client": "^6.8.2",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "@types/node-fetch": "^2.6.11",
-    "@merit-systems/echo-typescript-sdk": "file:../echo-typescript-sdk",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
     "jose": "^6.0.11",
     "node-fetch": "^2.7.0",
+    "openai": "^4.97.0",
     "prisma": "^6.8.2",
     "register": "link:@opentelemetry/auto-instrumentations-node/register",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "viem": "^2.33.3",
-    "openai": "^4.97.0"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
