--- a/echo-react-sdk/package.json
+++ b/echo-react-sdk/package.json
@@ -56,7 +56,7 @@
     }
   },
   "dependencies": {
-    "@merit-systems/echo-typescript-sdk": "^1.0.1",
+    "@merit-systems/echo-typescript-sdk": "workspace:*",
     "dompurify": "^3.2.6",
     "oidc-client-ts": "^3.2.1",
     "react-oidc-context": "^3.3.0"
