--- a/echo-typescript-sdk/package.json
+++ b/echo-typescript-sdk/package.json
@@ -17,6 +17,7 @@
     "lint": "pnpx eslint src/**/*.ts",
     "lint:fix": "pnpx eslint src/**/*.ts --fix",
     "type-check": "tsc --noEmit",
+    "format": "prettier --write src",
     "test": "vitest run",
     "test:watch": "vitest --watch",
     "prepublishOnly": "pnpm run build"
@@ -30,7 +31,8 @@
   "author": "Echo Team",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "axios-auth-refresh": "^3.3.6"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
