--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -15,7 +15,8 @@
     "prisma:reset": "pnpx prisma migrate reset",
     "copy:model-prices": "cp ../echo-server/model_prices.json ./model_prices.json",
     "check-types": "tsc --noEmit",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
@@ -58,6 +59,7 @@
     "@trpc/next": "^11.4.4",
     "@trpc/react-query": "^11.4.4",
     "@trpc/server": "^11.4.4",
+    "@types/mdx": "^2.0.13",
     "@vercel/blob": "^0.25.1",
     "@vercel/otel": "^1.13.0",
     "autonumeric": "^4.10.8",
@@ -66,6 +68,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.23.0",
+    "fumadocs-core": "^15.6.12",
+    "fumadocs-mdx": "^11.7.5",
+    "fumadocs-ui": "^15.6.12",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
