--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -2,7 +2,7 @@ name: Test SDK Publishing (Dry Run)
 
 on:
   push:
-    branches: [main]
+    branches: [master]
     paths:
       - 'echo-typescript-sdk/**'
       - 'echo-react-sdk/**'
@@ -11,7 +11,7 @@ on:
       - 'pnpm-lock.yaml'
       - 'package.json'
   pull_request:
-    branches: [main]
+    branches: [master]
     paths:
       - 'echo-typescript-sdk/**'
       - 'echo-react-sdk/**'
