--- a/.github/workflows/publish-sdks.yml
+++ b/.github/workflows/publish-sdks.yml
@@ -46,6 +46,11 @@ jobs:
       - name: Install workspace dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Build TypeScript SDK first (dependency)
+        if: matrix.package.name == 'echo-react-sdk'
+        working-directory: ./echo-typescript-sdk
+        run: pnpm run build
+
       - name: Verify version consistency
         working-directory: ${{ matrix.package.path }}
         run: |
