--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,4 +1,4 @@
-name: Integration Tests
+name: Tests
 
 on:
   pull_request:
@@ -57,6 +57,12 @@ jobs:
 
       - name: Install workspace dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Run all workspace tests
+        run: |
+          echo "🧪 Running all workspace tests (unit + integration)..."
+          pnpm run test:all
+          echo "✅ All workspace tests passed"
 
       - name: Create integration test environment file
         working-directory: integration-tests
