--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -18,12 +18,14 @@ on:
       - '.github/workflows/test-publish.yml'
 
 jobs:
-  test-typescript-sdk:
-    name: Test TypeScript SDK publishing
+  test-publish:
+    name: Test SDK publishing workflow
     runs-on: ubuntu-latest
     outputs:
-      typescript-ready: ${{ steps.final-check.outputs.ready }}
-      typescript-version: ${{ steps.get-version.outputs.version }}
+      typescript-ready: ${{ steps.test-typescript.outputs.ready }}
+      react-ready: ${{ steps.test-react.outputs.ready }}
+      typescript-version: ${{ steps.get-versions.outputs.typescript-version }}
+      react-version: ${{ steps.get-versions.outputs.react-version }}
 
     steps:
       - name: Checkout code
@@ -44,72 +46,53 @@ jobs:
       - name: Install workspace dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Get package info
-        id: get-version
-        working-directory: ./echo-typescript-sdk
+      - name: Get package versions
+        id: get-versions
         run: |
-          echo "📦 Package: echo-typescript-sdk"
-          PACKAGE_NAME=$(node -p "require('./package.json').name")
-          PACKAGE_VERSION=$(node -p "require('./package.json').version")
-          echo "Name: $PACKAGE_NAME"
-          echo "Version: $PACKAGE_VERSION"
-          echo "version=$PACKAGE_VERSION" >> $GITHUB_OUTPUT
-          echo "Private: $(node -p "require('./package.json').private || false")"
+          TS_VERSION=$(node -p "require('./echo-typescript-sdk/package.json').version")
+          REACT_VERSION=$(node -p "require('./echo-react-sdk/package.json').version")
+          echo "typescript-version=$TS_VERSION" >> $GITHUB_OUTPUT
+          echo "react-version=$REACT_VERSION" >> $GITHUB_OUTPUT
+          echo "📦 TypeScript SDK: v$TS_VERSION"
+          echo "📦 React SDK: v$REACT_VERSION"
 
-      - name: Check package configuration
+      # TypeScript SDK Tests
+      - name: Check TypeScript SDK configuration
         working-directory: ./echo-typescript-sdk
         run: |
+          echo "🔍 Checking TypeScript SDK configuration..."
+          PACKAGE_NAME=$(node -p "require('./package.json').name")
+          echo "Name: $PACKAGE_NAME"
+
           # Check if package.json has required fields for publishing
           if [ "$(node -p "require('./package.json').private || false")" = "true" ]; then
             echo "❌ Package is marked as private - cannot publish"
             exit 1
           fi
 
-          # Check required fields
-          if [ -z "$(node -p "require('./package.json').name")" ]; then
+          if [ -z "$PACKAGE_NAME" ]; then
             echo "❌ Package name is missing"
             exit 1
           fi
 
-          if [ -z "$(node -p "require('./package.json').version")" ]; then
-            echo "❌ Package version is missing"
-            exit 1
-          fi
+          echo "✅ TypeScript SDK configuration looks good"
 
-          echo "✅ Package configuration looks good"
-
-      - name: Build TypeScript SDK
+      - name: Build and test TypeScript SDK
+        id: test-typescript
         working-directory: ./echo-typescript-sdk
         run: |
           echo "🔨 Building TypeScript SDK..."
           pnpm run build
-          echo "✅ Build completed"
 
-      - name: Run tests
-        working-directory: ./echo-typescript-sdk
-        run: |
-          echo "🧪 Running tests for TypeScript SDK..."
+          echo "🧪 Testing TypeScript SDK..."
           pnpm run test
-          echo "✅ Tests passed"
-
-      - name: Type check
-        working-directory: ./echo-typescript-sdk
-        run: |
-          echo "🔍 Type checking TypeScript SDK..."
           pnpm run type-check
-          echo "✅ Type check passed"
 
-      - name: Verify build output
-        working-directory: ./echo-typescript-sdk
-        run: |
           echo "📁 Checking build output..."
           if [ ! -d "dist" ]; then
             echo "❌ dist directory not found"
             exit 1
           fi
-
-          echo "📋 Contents of dist directory:"
-          ls -la dist/
 
           # Check for main files
           MAIN_FILE=$(node -p "require('./package.json').main")
@@ -125,156 +108,68 @@ jobs:
             exit 1
           fi
 
-          echo "✅ Build output verification passed"
-
-      - name: Test npm pack
-        working-directory: ./echo-typescript-sdk
-        run: |
           echo "📦 Testing npm pack..."
           npm pack --dry-run
-          echo "✅ npm pack dry run successful"
 
-      - name: Test npm publish (dry run)
-        working-directory: ./echo-typescript-sdk
-        run: |
           echo "🚀 Testing npm publish (dry run)..."
           npm publish --dry-run --access public
-          echo "✅ npm publish dry run successful"
 
-      - name: Check package size
-        working-directory: ./echo-typescript-sdk
-        run: |
           echo "📏 Checking package size..."
           TARBALL=$(npm pack --silent)
           SIZE=$(ls -lh "$TARBALL" | awk '{print $5}')
           echo "Package size: $SIZE"
-
-          # Clean up tarball
           rm "$TARBALL"
 
-          echo "✅ Package size check completed"
-
-      - name: Simulate version check
-        working-directory: ./echo-typescript-sdk
-        run: |
-          echo "🔍 Simulating version check against npm registry..."
+          echo "🔍 Simulating version check..."
           PACKAGE_NAME=$(node -p "require('./package.json').name")
           PACKAGE_VERSION=$(node -p "require('./package.json').version")
 
           if npm view "$PACKAGE_NAME@$PACKAGE_VERSION" version 2>/dev/null; then
-            echo "⚠️  Version $PACKAGE_VERSION of $PACKAGE_NAME already exists on npm"
-            echo "This would be skipped in the real publish workflow"
+            echo "⚠️  Version $PACKAGE_VERSION already exists on npm"
           else
-            echo "✅ Version $PACKAGE_VERSION of $PACKAGE_NAME does not exist - would be published"
+            echo "✅ Version $PACKAGE_VERSION does not exist - would be published"
           fi
 
-      - name: Final readiness check
-        id: final-check
-        run: |
           echo "ready=true" >> $GITHUB_OUTPUT
           echo "✅ TypeScript SDK is ready for publishing"
 
-  test-react-sdk:
-    name: Test React SDK publishing
-    runs-on: ubuntu-latest
-    needs: test-typescript-sdk
-    if: always()
-    outputs:
-      react-ready: ${{ steps.final-check.outputs.ready }}
-      react-version: ${{ steps.get-version.outputs.version }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Install pnpm
-        run: npm install -g pnpm
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'pnpm'
-          registry-url: https://registry.npmjs.org
-
-      - name: Install workspace dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Build TypeScript SDK (dependency)
-        working-directory: ./echo-typescript-sdk
-        run: |
-          echo "🔨 Building TypeScript SDK for React SDK dependency..."
-          pnpm run build
-          echo "✅ TypeScript SDK built"
-
-      - name: Get package info
-        id: get-version
+      # React SDK Tests
+      - name: Check React SDK configuration
         working-directory: ./echo-react-sdk
         run: |
-          echo "📦 Package: echo-react-sdk"
+          echo "🔍 Checking React SDK configuration..."
           PACKAGE_NAME=$(node -p "require('./package.json').name")
-          PACKAGE_VERSION=$(node -p "require('./package.json').version")
           echo "Name: $PACKAGE_NAME"
-          echo "Version: $PACKAGE_VERSION"
-          echo "version=$PACKAGE_VERSION" >> $GITHUB_OUTPUT
-          echo "Private: $(node -p "require('./package.json').private || false")"
 
-      - name: Check package configuration
-        working-directory: ./echo-react-sdk
-        run: |
           # Check if package.json has required fields for publishing
           if [ "$(node -p "require('./package.json').private || false")" = "true" ]; then
             echo "❌ Package is marked as private - cannot publish"
             exit 1
           fi
 
-          # Check required fields
-          if [ -z "$(node -p "require('./package.json').name")" ]; then
+          if [ -z "$PACKAGE_NAME" ]; then
             echo "❌ Package name is missing"
             exit 1
           fi
 
-          if [ -z "$(node -p "require('./package.json').version")" ]; then
-            echo "❌ Package version is missing"
-            exit 1
-          fi
+          echo "✅ React SDK configuration looks good"
 
-          echo "✅ Package configuration looks good"
-
-      - name: Build React SDK
+      - name: Build and test React SDK
+        id: test-react
         working-directory: ./echo-react-sdk
         run: |
           echo "🔨 Building React SDK..."
           pnpm run build
-          echo "✅ Build completed"
 
-      - name: Run tests
-        working-directory: ./echo-react-sdk
-        run: |
-          echo "🧪 Running tests for React SDK..."
+          echo "🧪 Testing React SDK..."
           pnpm run test
-          echo "✅ Tests passed"
-
-      - name: Type check
-        working-directory: ./echo-react-sdk
-        run: |
-          echo "🔍 Type checking React SDK..."
           pnpm run type-check
-          echo "✅ Type check passed"
 
-      - name: Verify build output
-        working-directory: ./echo-react-sdk
-        run: |
           echo "📁 Checking build output..."
           if [ ! -d "dist" ]; then
             echo "❌ dist directory not found"
             exit 1
           fi
-
-          echo "📋 Contents of dist directory:"
-          ls -la dist/
 
           # Check for main files
           MAIN_FILE=$(node -p "require('./package.json').main")
@@ -290,73 +185,48 @@ jobs:
             exit 1
           fi
 
-          echo "✅ Build output verification passed"
-
-      - name: Test npm pack
-        working-directory: ./echo-react-sdk
-        run: |
           echo "📦 Testing npm pack..."
           npm pack --dry-run
-          echo "✅ npm pack dry run successful"
 
-      - name: Test npm publish (dry run)
-        working-directory: ./echo-react-sdk
-        run: |
           echo "🚀 Testing npm publish (dry run)..."
           npm publish --dry-run --access public
-          echo "✅ npm publish dry run successful"
 
-      - name: Check package size
-        working-directory: ./echo-react-sdk
-        run: |
           echo "📏 Checking package size..."
           TARBALL=$(npm pack --silent)
           SIZE=$(ls -lh "$TARBALL" | awk '{print $5}')
           echo "Package size: $SIZE"
-
-          # Clean up tarball
           rm "$TARBALL"
 
-          echo "✅ Package size check completed"
-
-      - name: Simulate version check
-        working-directory: ./echo-react-sdk
-        run: |
-          echo "🔍 Simulating version check against npm registry..."
+          echo "🔍 Simulating version check..."
           PACKAGE_NAME=$(node -p "require('./package.json').name")
           PACKAGE_VERSION=$(node -p "require('./package.json').version")
 
           if npm view "$PACKAGE_NAME@$PACKAGE_VERSION" version 2>/dev/null; then
-            echo "⚠️  Version $PACKAGE_VERSION of $PACKAGE_NAME already exists on npm"
-            echo "This would be skipped in the real publish workflow"
+            echo "⚠️  Version $PACKAGE_VERSION already exists on npm"
           else
-            echo "✅ Version $PACKAGE_VERSION of $PACKAGE_NAME does not exist - would be published"
+            echo "✅ Version $PACKAGE_VERSION does not exist - would be published"
           fi
 
-      - name: Final readiness check
-        id: final-check
-        run: |
           echo "ready=true" >> $GITHUB_OUTPUT
           echo "✅ React SDK is ready for publishing"
 
   summary:
     name: Publishing test summary
     runs-on: ubuntu-latest
-    needs: [test-typescript-sdk, test-react-sdk]
+    needs: test-publish
     if: always()
 
     steps:
       - name: Test results summary
         run: |
-          TYPESCRIPT_RESULT="${{ needs.test-typescript-sdk.result }}"
-          REACT_RESULT="${{ needs.test-react-sdk.result }}"
+          TEST_RESULT="${{ needs.test-publish.result }}"
 
-          if [ "$TYPESCRIPT_RESULT" = "success" ] && [ "$REACT_RESULT" = "success" ]; then
+          if [ "$TEST_RESULT" = "success" ]; then
             echo "🎉 All publishing tests passed!"
             echo ""
             echo "✅ Both SDK packages are ready for publishing:"
-            echo "  - @merit-systems/echo-typescript-sdk (v${{ needs.test-typescript-sdk.outputs.typescript-version }})"
-            echo "  - @merit-systems/echo-react-sdk (v${{ needs.test-react-sdk.outputs.react-version }})"
+            echo "  - @merit-systems/echo-typescript-sdk (v${{ needs.test-publish.outputs.typescript-version }})"
+            echo "  - @merit-systems/echo-react-sdk (v${{ needs.test-publish.outputs.react-version }})"
             echo ""
             echo "The packages can be safely published using:"
             echo "  1. Push to production branch (recommended)"
@@ -368,13 +238,6 @@ jobs:
             echo "  • GitHub Action will auto-publish + create tags"
           else
             echo "❌ Publishing tests failed!"
-            echo ""
-            if [ "$TYPESCRIPT_RESULT" != "success" ]; then
-              echo "❌ TypeScript SDK tests failed"
-            fi
-            if [ "$REACT_RESULT" != "success" ]; then
-              echo "❌ React SDK tests failed"
-            fi
             echo ""
             echo "Please check the workflow logs and fix any issues before attempting to publish."
             exit 1
