--- a/echo-authjs-provider/package.json
+++ b/echo-authjs-provider/package.json
@@ -18,6 +18,7 @@
     "lint:fix": "pnpx eslint src/**/*.ts --fix",
     "type-check": "tsc --noEmit",
     "test": "echo 'No tests for this package'",
+    "test:unit": "echo 'No tests for this package'",
     "test:watch": "vitest --watch",
     "prepublishOnly": "pnpm run build"
   },
