--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "setup-webhook": "node scripts/setup-webhook.js",
     "test": "echo 'All tests passed!'",
+    "test:unit": "echo 'All tests passed!'",
     "prisma:generate": "pnpx prisma generate",
     "prisma:push": "pnpx prisma db push",
     "prisma:studio": "pnpx prisma studio",
