--- a/echo-react-sdk/package.json
+++ b/echo-react-sdk/package.json
@@ -23,6 +23,7 @@
     "lint": "eslint src --ext .ts,.tsx",
     "format": "prettier --write src",
     "test": "vitest run",
+    "test:unit": "vitest run",
     "test:ui": "vitest --ui",
     "test:security": "vitest run --config vitest.security.config.ts",
     "test:integration": "vitest run --config vitest.integration.config.ts",
