--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:server": "cd echo-server && pnpm run build && cd ..",
     "start:server": "cd echo-server && pnpm run start",
     "test": "pnpm run --recursive test",
-    "test:unit": "cd echo-typescript-sdk && pnpm run build && cd .. && pnpm run --recursive test:unit",
-    "test:integration": "cd integration-tests && pnpm test && cd ../echo-server && pnpm run test:integration",
+    "test:unit": "cd echo-typescript-sdk && pnpm run build && cd .. && pnpm run --recursive --filter=!echo-server test:unit",
+    "test:integration": "cd integration-tests && pnpm test",
     "test:integration:watch": "cd integration-tests && pnpm test:watch",
     "test:all": "pnpm run test:unit && pnpm run test:integration",
     "lint": "pnpm run --recursive lint",
