move the ai sdk providers to ts sdk to share

--- a/echo-typescript-sdk/package.json
+++ b/echo-typescript-sdk/package.json
@@ -42,5 +42,11 @@
   },
   "files": [
     "dist/**/*"
-  ]
+  ],
+  "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.5",
+    "@ai-sdk/google": "^2.0.7",
+    "@ai-sdk/openai": "^2.0.16",
+    "ai": "^5.0.18"
+  }
 }
