--- a/echo-react-sdk/package.json
+++ b/echo-react-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@merit-systems/echo-react-sdk",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "React SDK for Echo OAuth2 + PKCE authentication and token management",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -57,7 +57,7 @@
     }
   },
   "dependencies": {
-    "@merit-systems/echo-typescript-sdk": "^1.0.2",
+    "@merit-systems/echo-typescript-sdk": "workspace:*",
     "dompurify": "^3.2.6",
     "oidc-client-ts": "^3.2.1",
     "react-oidc-context": "^3.3.0"
