add sdks to dockerfile.railway

--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -77,6 +77,8 @@ COPY tsconfig.base.json ./
 COPY echo-control/ ./echo-control/
 COPY echo-server/ ./echo-server/
 COPY echo-typescript-sdk/ ./echo-typescript-sdk/
+COPY echo-next-sdk/ ./echo-next-sdk/
+COPY echo-react-sdk/ ./echo-react-sdk/
 
 # Install dependencies for both projects (including dev dependencies for build)
 WORKDIR /app/echo-control
