--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.5.3",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   },
   "lint-staged": {
