add migration apply on build

--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -9,11 +9,12 @@
     "setup-prisma": "pnpm run copy-schema && pnpm run prisma:generate",
     "copy-prisma": "pnpm run setup-prisma",
     "copy-prisma-to-dist": "mkdir -p dist/generated && cp -r src/generated/prisma dist/generated/",
-    "prebuild": "pnpm run copy-prisma",
-    "predev": "pnpm run copy-prisma",
+    "prebuild": "pnpm run copy-prisma && pnpm run prisma:migrate-deploy",
+    "predev": "pnpm run copy-prisma && pnpm run prisma:migrate-deploy",
     "prestart": "pnpm run copy-prisma",
     "dev": "npx tsx src/server.ts",
     "start": "node dist/server.js",
+    "prisma:migrate-deploy": "pnpx prisma migrate deploy",
     "anthropic-client": "npx tsx src/clients/anthropic-client.ts",
     "anthropic-gpt-client": "npx tsx src/clients/anthropic-gpt-client.ts",
     "gemini-client": "npx tsx src/clients/gemini-client.ts",
