move to prebuild generate

--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -9,8 +9,8 @@
     "setup-prisma": "pnpm run copy-schema && pnpm run prisma:generate",
     "copy-prisma": "pnpm run setup-prisma",
     "copy-prisma-to-dist": "mkdir -p dist/generated && cp -r src/generated/prisma dist/generated/",
-    "prebuild": "pnpm run copy-prisma && pnpm run prisma:migrate-deploy",
-    "predev": "pnpm run copy-prisma && pnpm run prisma:migrate-deploy",
+    "prebuild": "pnpm run copy-schema && if [ -n \"$DATABASE_URL\" ]; then pnpm run prisma:generate; else echo 'Skipping Prisma generation - DATABASE_URL not set'; fi",
+    "predev": "pnpm run copy-prisma",
     "prestart": "pnpm run copy-prisma",
     "dev": "npx tsx src/server.ts",
     "start": "node dist/server.js",
