--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -96,12 +96,13 @@ WORKDIR /app/echo-typescript-sdk
 RUN pnpm install
 RUN pnpm run build
 
-# Step 2: Copy the generated Prisma files to echo-server
 WORKDIR /app/echo-server
 RUN pnpm run copy-prisma
 
 # Step 3: Build echo-server
 RUN pnpm run build
+
+RUN pnpm run prisma:migrate-deploy
 
 # Set NODE_OPTIONS to enable OpenTelemetry for echo-server
 
