--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && prisma migrate deploy && next build",
-    "start": "next start",
+    "build": "if [ -n \"$DATABASE_URL\" ]; then prisma generate; else echo 'Skipping Prisma generation - DATABASE_URL not set'; fi && next build",
+    "start": "pnpm run prisma:migrate-deploy && next start",
     "lint": "eslint .",
     "setup-webhook": "node scripts/setup-webhook.js",
     "test": "echo 'All tests passed!'",
