Revert "build on prepare react-sdk"
This reverts commit db9d222693c792610223945795dbeb55a0cc2894.

--- a/echo-react-sdk/package.json
+++ b/echo-react-sdk/package.json
@@ -32,7 +32,7 @@
     "build-storybook": "storybook build",
     "publish:test": "npm publish --access public --dry-run",
     "publish:real": "npm publish --access public",
-    "prepare": "tsup src/index.ts --dts --format esm --out-dir dist",
+    "prepare": "sh -c 'if [ \"$CI\" = true ]; then echo \"Skipping prepare in CI\"; else tsup src/index.ts --dts --format esm,cjs --out-dir dist; fi'",
     "prepublishOnly": "pnpm run build"
   },
   "keywords": [
