fix ridirect uri test

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -6,6 +6,7 @@ on:
       - 'echo-control/**'
       - 'echo-server/**'
       - 'echo-react-sdk/**'
+      - 'echo-next-sdk/**'
       - 'echo-typescript-sdk/**'
       - 'integration-tests/**'
       - '.github/workflows/**'
