--- a/package.json
+++ b/package.json
@@ -64,5 +64,11 @@
   },
   "dependencies": {
     "vitest": "^3.2.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.10",
+      "@types/react-dom": "19.1.7"
+    }
   }
 }
