--- a/.github/workflows/migrate-db.yml
+++ b/.github/workflows/migrate-db.yml
@@ -28,7 +28,7 @@ jobs:
           cache: 'pnpm'
       
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile --filter echo-control
         working-directory: ./echo-control
       
       - name: Run Prisma migrate deploy (Staging)
@@ -57,7 +57,7 @@ jobs:
           cache: 'pnpm'
       
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile --filter echo-control
         working-directory: ./echo-control
       
       - name: Run Prisma migrate deploy (Production)
