--- a/echo-typescript-sdk/package.json
+++ b/echo-typescript-sdk/package.json
@@ -23,12 +23,11 @@
     "test": "vitest run",
     "test:unit": "vitest run",
     "test:watch": "vitest --watch",
-    "get-models": "tsx scripts/get-available-models.ts",
-    "update-models": "tsx scripts/update-models.ts",
     "update-models:openai": "tsx scripts/update-openai-models.ts",
     "update-models:anthropic": "tsx scripts/update-anthropic-models.ts",
     "update-models:gemini": "tsx scripts/update-gemini-models.ts",
     "update-models:openrouter": "tsx scripts/update-openrouter-models.ts",
+    "update-all-models": "pnpm run update-models:openai && pnpm run update-models:anthropic && pnpm run update-models:gemini && pnpm run update-models:openrouter",
     "prepublishOnly": "pnpm run build"
   },
   "keywords": [
