add test case for edit image

--- a/smoke/providers/package.json
+++ b/smoke/providers/package.json
@@ -13,7 +13,8 @@
     "@ai-sdk/google": "^2.0.7",
     "@ai-sdk/openai": "^2.0.16",
     "@merit-systems/echo-typescript-sdk": "workspace:*",
-    "ai": "^5.0.18"
+    "ai": "^5.0.18",
+    "openai": "^5.16.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.34.1",
